[package]
name = "snippy"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
structopt = "0.3"
futures = "0.3.16"
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1", features = ["full"] }