[package]
name = "snippy"
version = "0.2.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
chrono = "0.4"
clipboard-win = "4.2.1"
reqwest = { version = "0.11", features = ["json"] }
structopt = "0.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.13.1", features = ["full"] }
